# autoware_claw

./: README.md  docker-compose.yml  setup.cfg
autoware_claw/: CMakeLists.txt  autoware_ros_node.py  docker-compose.yml  package.xml  setup.py  topic_adapters.py  types.py
autoware_claw/autoware_claw/: autoware_mcp_server.py  autoware_ros_node.py  coordinate_resolver.py  types.py
autoware_claw/config/: mcp_server.param.yaml
autoware_claw/docker/: nemoclaw.Dockerfile
autoware_claw/docker/autoware-overlay/: autoware-mcp-policy.yaml  inject-mcp-config.py
autoware_claw/launch/: mcp_server.launch.xml  planning_simulator.launch.xml
autoware_claw_rviz_plugins/: CMakeLists.txt  package.xml
autoware_claw_rviz_plugins/plugins/: plugin_description.xml
autoware_claw_rviz_plugins/rviz/: autoware_claw.rviz
autoware_claw_rviz_plugins/src/: autoware_claw_panel.cpp  autoware_claw_panel.hpp
docker/: nemoclaw.Dockerfile
docs/: building-with-autoware.md
