<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_claw</name>
  <version>0.1.0</version>
  <description>ROSClaw Southbound Driver for Autoware — bridges LLM agents to Autoware via MCP protocol</description>

  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>autoware_control_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>autoware_internal_planning_msgs</exec_depend>
  <exec_depend>autoware_internal_debug_msgs</exec_depend>
  <exec_depend>autoware_adapi_v1_msgs</exec_depend>
  <exec_depend>autoware_map_msgs</exec_depend>
  <exec_depend>tier4_vehicle_msgs</exec_depend>
  <exec_depend>tier4_control_msgs</exec_depend>
  <exec_depend>tier4_external_api_msgs</exec_depend>
  <exec_depend>autoware_lanelet2_extension_python</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- rosclaw, mcp are installed via pip -->
  <!-- autoware_launch and autoware_claw_rviz_plugins are runtime deps resolved via
       find-pkg-share in launch files; not declared as exec_depend to avoid pulling
       the entire Autoware dependency graph (incl. CUDA perception packages) at build time. -->
  <!-- NemoClaw (LLM agent) runs inside Docker for network security -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
